--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/assets/icon-background.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="TrustPanel: gerenciamento seguro de certificados digitais para sua empresa. Automatize processos, evite expiração e mantenha o controle total." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
