--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/assets/icon-background.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="TrustPanel: gerenciamento seguro de certificados digitais para sua empresa. Automatize processos, evite expiração e mantenha o controle total." />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="TrustPanel - Gestão de Certificados Digitais">
+    <meta name="description" content="Sistema de gestão de certificados digitais para empresas e profissionais. Gerencie seus certificados A1 e A3 de forma simples e segura.">
+    <meta name="theme-color" content="#4A90E2">
+    <link rel="icon" type="image/x-icon" href="/assets/icon-background.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>TrustPanel - Confiança Digital. Controle Total.</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <title>TrustPanel - Gestão de Certificados Digitais</title>
   </head>
   <body>
     <div id="root"></div>
