Inserir verificação de dominio do facebook e ajustar e-mail da trust

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="facebook-domain-verification" content="04r7c65ji7nh9ro5dwl8jx37xcuvnc" />
     <!-- Primary Meta Tags -->
     <meta name="title" content="TrustPanel - Gestão de Certificados Digitais">
     <meta name="description" content="Sistema de gestão de certificados digitais para empresas e profissionais. Gerencie seus certificados A1 e A3 de forma simples e segura.">
